extract-doctest/tests/ui/no_attrs.rs
use extract_doctest::extract_doctest;

#[extract_doctest(unknown_attr)]
extern {}

fn main() {}